--- a/templates/model.html
+++ b/templates/model.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/model.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='model.css') }}">
     
     <title>Document</title>
 
@@ -15,7 +15,7 @@
 
     <div>
    <header> 
- <img src="\static\css\tchnocolabs_logo.jpeg" alt="yosri mehjoubi portfolio" class="logo">
+ <img src="/static/logo.jpeg" alt="" class="logo" style="align-items: center;">
 
 </header>
 </div>
@@ -25,7 +25,7 @@
     <div class="file-upload">
     <form action="/success" method="post" enctype="multipart/form-data">
         <label for="file-input">Choisissez un fichier :</label>
-        <input type="file" id="file-input" name="file" accept=".jpg, .jpeg, .png" />
+        <input type="file" id="file-input" name="file[]" accept=".jpg, .jpeg, .png" multiple/>
         <button type="submit">Envoyer</button>
     </form>
 </div>
